--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,28 @@
-version: '3.8'
-
 services:
-  chromadb:
-    image: chromadb/chroma:latest
-    container_name: chromadb
+  backend:
+    build: 
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "8000:8000"
     volumes:
-      - chroma_data:/chroma/chroma
+      - ./database/pdfs:/app/database/pdfs
+      - ./database/web_pages:/app/database/web_pages
+    environment:
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - OPENAI_BASE_URL=${OPENAI_BASE_URL}
+      - DATA_DIR=/app/database/pdfs
+      - INDEX_PERSIST_DIR=/app/.index_storage
+      - CHROMA_HOST=chromadb
+      - CHROMA_PORT=8000
+    depends_on:
+      - chromadb
+  chromadb:
+    image: chromadb/chroma:latest
+    ports:
+      - "8001:8000"
+    volumes:
+      - ./.index_storage:/chroma/chroma
     environment:
       - IS_PERSISTENT=TRUE
-    restart: unless-stopped
-
-volumes:
-  chroma_data:
+      - PERSIST_DIRECTORY=/chroma/chroma
