--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,57 @@
+# services:
+#   backend:
+#     build: 
+#       context: .
+#       dockerfile: Dockerfile
+#     ports:
+#       - "8000:8000"
+#     volumes:
+#       - ./database/pdfs:/app/database/pdfs
+#       - ./database/web_pages:/app/database/web_pages
+#     environment:
+#       - OPENAI_API_KEY=${OPENAI_API_KEY}
+#       - OPENAI_BASE_URL=${OPENAI_BASE_URL}
+#       - DATA_DIR=/app/database/pdfs
+#       - INDEX_PERSIST_DIR=/app/.index_storage
+#       - CHROMA_HOST=chromadb
+#       - CHROMA_PORT=8000
+#     depends_on:
+#       - chromadb
+#   chromadb:
+#     image: chromadb/chroma:latest
+#     ports:
+#       - "8001:8000"
+#     volumes:
+#       - ./.index_storage:/chroma/chroma
+#     environment:
+#       - IS_PERSISTENT=TRUE
+#       - PERSIST_DIRECTORY=/chroma/chroma
+
+# docker-compose.yml
 services:
-  backend:
-    build: 
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - "8000:8000"
-    volumes:
-      - ./database/pdfs:/app/database/pdfs
-      - ./database/web_pages:/app/database/web_pages
+  api:
+    build: ./backend
+    env_file: .env
     environment:
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
-      - OPENAI_BASE_URL=${OPENAI_BASE_URL}
+      - REDIS_URL=redis://redis:6379/0
       - DATA_DIR=/app/database/pdfs
       - INDEX_PERSIST_DIR=/app/.index_storage
-      - CHROMA_HOST=chromadb
-      - CHROMA_PORT=8000
-    depends_on:
-      - chromadb
-  chromadb:
-    image: chromadb/chroma:latest
-    ports:
-      - "8001:8000"
-    volumes:
-      - ./.index_storage:/chroma/chroma
+    volumes: [".:/app"]
+    ports: ["8000:8000"]
+    depends_on: [redis]
+    command: uvicorn backend.src.main:app --host 0.0.0.0 --port 8000
+
+  worker:
+    build: ./backend
+    env_file: .env
     environment:
-      - IS_PERSISTENT=TRUE
-      - PERSIST_DIRECTORY=/chroma/chroma
+      - REDIS_URL=redis://redis:6379/0
+      - DATA_DIR=/app/database/pdfs
+      - INDEX_PERSIST_DIR=/app/.index_storage
+    volumes: [".:/app"]
+    depends_on: [redis]
+    command: celery -A backend.src.celery_app:celery_app worker -l info
+
+  redis:
+    image: redis:7-alpine
+    ports: ["6379:6379"]
